[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obd"
version = "0.1.0"
description = "Simple CAN bus monitor"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["can", "obd"]
license = {text = "MIT"}
dependencies = ["python-can", "cantools"]

[tool.setuptools.packages.find]
where = ["src"]
